# patrolling_sim_ros2_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml  start_experiment_gazebo.py
description/: stopy.urdf
launch/: bringup_launch.py  localization_launch.py  map.launch.py  multi_stop_simulation_launch.py  navigation_launch.py  stop_simulation_launch.py
params/: nav2_multirobot_params_0.yaml  nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml  nav2_multirobot_params_3.yaml  nav2_multirobot_params_4.yaml  nav2_multirobot_params_5.yaml  nav2_multirobot_params_6.yaml  nav2_multirobot_params_7.yaml
src/: GoToStartPos.cpp  PatrolAgent.cpp  getgraph.cpp  monitor.cpp
worlds/: 1r5.world  DIAG_labs.world  broughton.world  ctcv.world  cumberland.world  example.world  grid.world
